--- a/src/main/resources/templates/evento/eventoFSCEdit.html
+++ b/src/main/resources/templates/evento/eventoFSCEdit.html
@@ -156,7 +156,7 @@
 								</form>
 							</div>
 							<div class="modal-footer">
-								<button type="button" class="btn btn-primary" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
+								<button type="button" onclick="closeModaleAddAttivitaTo()" class="btn btn-primary" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
 								<label for="targetTableAttivitaFSC" class="btn btn-success pull-right" onclick="sendAjaxAddAttivitaToProgramma()" th:text="#{label.invia}">Invia</label>
 							</div>
 						</div>
@@ -216,7 +216,7 @@
 								</form>
 							</div>
 							<div class="modal-footer">
-								<button type="button" class="btn btn-primary" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
+								<button type="button" onclick="closeModaleAddRuoloOreFSCTo()" class="btn btn-primary" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
 								<label for="targetTableAttivitaFSC" class="btn btn-success pull-right" onclick="sendAjaxAddRuoloOreToTemp()" th:text="#{label.invia}">Invia</label>
 							</div>
 						</div>
@@ -1578,29 +1578,43 @@
 				};
 
 
-			 /********************* PROGRAMMA GIORNALIERO ****************************/
-			  function openAddAttivitaTo(target,programmaIndex,modificaElemento){
-					$('#targetTableAttivitaFSC').val(target);
-					$('#addAttivitaTo').val(programmaIndex);
-					$('#modificaElementoAttivitaFSC').val(modificaElemento);
+				/********************* PROGRAMMA GIORNALIERO ****************************/
+				function openAddAttivitaTo(target,programmaIndex,modificaElemento,clean){
+					if(clean) {
+						var url = [[@{|/provider/${eventoWrapper.evento.provider.id}/evento/resettaAttivita/|}]] + target;
+						$.get(url).done(function(data) {
+							$('#container-' + target).html(data);
+							reInitModaleAddAttivita();
+							$("#add-attivitaFSC-modal").modal("show");
+							openAddAttivitaTo(target,programmaIndex,modificaElemento,false);
+						})
+					  	.fail(function() {
+					    	alert( "error" );
+					 	})
+					 }
+					 else {
+						$('#targetTableAttivitaFSC').val(target);
+						$('#addAttivitaTo').val(programmaIndex);
+						$('#modificaElementoAttivitaFSC').val(modificaElemento);
 
-					var tipologiaEvento = $('#tipologiaEventoId').val();
-					setEvFSCRuoliCoinvolti();
+						var tipologiaEvento = $('#tipologiaEventoId').val();
+						setEvFSCRuoliCoinvolti();
 
-					switch(tipologiaEvento){
-					case 'TRAINING_INDIVIDUALIZZATO': showAzioneLabel();
-						break;
-					case 'GRUPPI_DI_MIGLIORAMENTO':	showFaseLabel();
-						break;
-					case 'PROGETTI_DI_MIGLIORAMENTO':showAzioneLabel();
-						break;
-					case 'ATTIVITA_DI_RICERCA': showAzioneLabel();
-						break;
-					case 'AUDIT_CLINICO_ASSISTENZIALE': showAzioneLabel();
-						break;
-					default: break;
+						switch(tipologiaEvento){
+							case 'TRAINING_INDIVIDUALIZZATO': showAzioneLabel();
+								break;
+							case 'GRUPPI_DI_MIGLIORAMENTO':	showFaseLabel();
+								break;
+							case 'PROGETTI_DI_MIGLIORAMENTO':showAzioneLabel();
+								break;
+							case 'ATTIVITA_DI_RICERCA': showAzioneLabel();
+								break;
+							case 'AUDIT_CLINICO_ASSISTENZIALE': showAzioneLabel();
+								break;
+							default: break;
+						}
 					}
-				}
+				 }
 
 				function showFaseLabel(){
 					$('#azioneLabel').hide();
@@ -1645,7 +1659,7 @@
 						  })
 					  	.fail(function() {
 					  		//TODO mostra error sui campi mancanti
-					    	alert( "errorFSC" );
+					    	alert( "errorFSC sendAjaxAddAttivitaToProgramma" );
 					 	 })
 				}
 
@@ -1675,8 +1689,8 @@
 					$.get(url).done(function(data) {
 						$('#container-' + target).html(data);
 						reInitModaleAddAttivita();
-						$('#add-attivita').click();
-						openAddAttivitaTo(target,programmaIndex,modificaElemento);
+						$("#add-attivitaFSC-modal").modal("show");
+						openAddAttivitaTo(target,programmaIndex,modificaElemento,false);
 					  })
 				  	.fail(function() {
 				    	alert( "error" );
