--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -238,6 +238,8 @@
 				"bFilter" : false,
 			});
 
+			$('.datatable-responsive-ordering-user-search').DataTable();
+
 			$('.datatable-responsive-search').DataTable({
 				"bInfo" : false,
 				"bPaginate" : false,
