--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -72,6 +72,7 @@
 									<li><a th:href="@{/user/list}" th:text="#{label.utenti}">label.utenti</a></li>
 									<li><a th:href="@{/seduta/list}" th:text="#{label.lista_sedute}">label.lista_sedute</a></li>
 									<li><a th:href="@{/comunicazione/dashboard}" th:text="#{label.comunicazioni}"></a></li>
+									<li><a th:href="@{/anagrafeRegionaleCrediti/list}" th:text="#{label.anagrafe_regionale_crediti}"></a></li>
 								</ul>
 							</li>
 
