--- a/src/main/resources/templates/evento/allegaContrattiSponsor.html
+++ b/src/main/resources/templates/evento/allegaContrattiSponsor.html
@@ -8,7 +8,7 @@
 	<div layout:fragment="content">
 
 		<div id="inserimento-allegato-modal" class="modal fade modal-inserimento-allegato" data-model-index="1" role="dialog">
-			<div class="modal-dialog modal-md">
+			<div class="modal-dialog modal-lg">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" onclick="closeModalContrattoSponsor()" data-dismiss="modal"><span aria-hidden="true">×</span>
@@ -31,6 +31,7 @@
 
 							<input id="modeSponsor" type="text" name="modeModalSponsor" style="display: none;" />
 							<input id="idSponsor" type="text" name="idModalSponsor" style="display: none;" />
+							<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
 
 						</form>
 
@@ -72,20 +73,18 @@
 								</tr>
 							</thead>
 							<tbody th:remove="all-but-first">
-								<tr th:each="sponsor, row : ${sponsorWrapper.sponsorList}">
-									<td th:text="${sponsor.name}"></td>
-									<td>
-										<div id="contrattoSponsor[__${sponsor.id}__]">
-											<th:block th:fragment="allegatoContrattoSponsorTable[__${sponsor.id}__]">
-												<a th:if="${sponsor.sponsorFile != null}" th:href="@{|/file/${sponsor.sponsorFile.id}|}" th:text="${sponsor.sponsorFile.nomeFile}"></a>
-												<div th:unless="${sponsor.sponsorFile != null}" th:text="#{label.contratto_da_inserire}" class="danger"></div>
-											</th:block>
-										</div>
-									</td>
-									<td>
-										<a th:unless="${sponsor.sponsorFile != null}" class="btn btn-table btn-success" th:onclick="'openModalContrattoSponsor(' + ${sponsor.id} + ', \'' + ${sponsor.name} + '\', \'new\')'" th:text="#{label.inserisci_contratto}"></a>
-										<a th:if="${sponsor.sponsorFile != null}" class="btn btn-table btn-primary" th:onclick="'openModalContrattoSponsor(' + ${sponsor.id} + ', \'' + ${sponsor.name} + '\', \'new\')'" th:text="#{label.modifica_contratto}"></a>
-									</td>
+								<tr th:each="sponsor, row : ${sponsorWrapper.sponsorList}" th:id="contrattoSponsor__${sponsor.id}__">
+									<th:block  th:fragment="allegatoContrattoSponsorTable">
+										<td th:text="${sponsor.name}"></td>
+										<td>
+											<a th:if="${sponsor.sponsorFile != null}" th:href="@{|/file/${sponsor.sponsorFile.id}|}" th:text="${sponsor.sponsorFile.nomeFile}"></a>
+											<div th:unless="${sponsor.sponsorFile != null}" th:text="#{label.contratto_da_inserire}" class="danger"></div>
+										</td>
+										<td>
+											<a th:unless="${sponsor.sponsorFile != null}" class="btn btn-table btn-success" th:onclick="'openModalContrattoSponsor(' + ${sponsor.id} + ', \'' + ${sponsor.name} + '\', \'new\')'" th:text="#{label.inserisci_contratto}"></a>
+											<a th:if="${sponsor.sponsorFile != null}" class="btn btn-table btn-primary" th:onclick="'openModalContrattoSponsor(' + ${sponsor.id} + ', \'' + ${sponsor.name} + '\', \'edit\')'" th:text="#{label.modifica_contratto}"></a>
+										</td>
+									</th:block>
 								</tr>
 							</tbody>
 						</table>
@@ -98,9 +97,11 @@
 		<script th:inline="javascript">
 		/*<![CDATA[*/
 
+		var table;
+
 		$(document).ready(function() {
 
-			$(".datatable-responsive-sponsor-allega").DataTable({
+			table = $(".datatable-responsive-sponsor-allega").DataTable({
 				"bFilter" : false,
 				"bInfo" : false,
 				"bPaginate" : false,
@@ -118,14 +119,20 @@
 		function openModalContrattoSponsor(id, nomeSponsor, mode) {
 			$("#modeSponsor").val(mode);
 			$("#idSponsor").val(id);
-			var prefixUrl = [[@{/}]];
-			var url = prefixUrl + "provider/" + [[${providerId}]] + "/evento/" + [[${eventoId}]] + "/sponsor/" + id + "/contratto/save";
-			$("#formModalSponsor").attr("action", url);
-			var prefixTitle = [[#{label.inserimento_contratto_sponsor}]];
-			var title = prefixTitle + nomeSponsor;
+			var urlPost = [[@{|/provider/${providerId}/evento/${eventoId}/sponsor/|}]] + id + '/saveContratto';
+			$("#formModalSponsor").attr("action", urlPost);
+			var title = [[#{label.inserimento_contratto_sponsor}]] + nomeSponsor;
 			$("#titleModalSponsor").text(title);
 			if(mode == "edit") {
-				alert("TODO mostra vecchio contratto nella modale")
+				var urlGet = [[@{|/provider/${providerId}/evento/${eventoId}/sponsor/|}]] + id + '/loadModaleSponsor';
+				$.get(urlGet)
+					.done(function(data) {
+						$("#allegatoModal").html(data);
+					})
+					.fail(function(error) {
+				    	alert( "error get file edit" );
+				  		console.log(error);
+					});
 			}
 			$("#inserimento-allegato-modal").modal("show");
 		}
@@ -134,8 +141,11 @@
 			$("#sponsorFile\\.id").val('');
 			$("#sponsorFile\\.nomeFile").val('');
 			$("#sponsorFile_label").text('').text([[#{label.nessun_file_selezionato}]]).removeAttr('href');
+			$("#sponsorFile").val('');
 			$("#formModalSponsor").removeAttr("action");
 			$("#inserimento-allegato-modal").modal("hide");
+			$(".alert").remove();
+			$(".item").removeClass("bad");
 		}
 
 		function sendAjaxContrattoSponsor(id) {
@@ -150,15 +160,26 @@
 						})
 					}
 					else {
-					  	$('#contrattoSponsor['+id+']').html(data);
+					  	$('#contrattoSponsor'+id).html(data);
+					  	table.draw();
 					  	closeModalContrattoSponsor();
 					}
 				})
-			  	.fail(function() {
-			  		//TODO
+			  	.fail(function(error) {
 			    	alert( "error submit form" );
+			  		console.log(error);
 				});
 		}
+
+		function addErrorModal(target, msg) {
+			var $messageAlert = $("<div class='alert'></div>");
+			$messageAlert.text(msg);
+			var $item = $(target).closest(".item")
+			$item.find(".alert").remove();
+				$item.append($messageAlert);
+			$item.addClass("bad");
+		}
+
 
 		/*]]>*/
 		</script>
