finita la parte degli sponsor evento + modifica allegati-ext

--- a/src/main/resources/templates/fragments/common-allegatiext.html
+++ b/src/main/resources/templates/fragments/common-allegatiext.html
@@ -11,7 +11,7 @@
 	<!-- Modale che contiene iframe per gestire il processo di frimaWeb -->
 	<div id="modalFrame" class="modal" tabindex="-1" role="dialog" >
 		<div role="document" style="margin: 30px auto; width: 520px;">
-			Modal content 
+			Modal content
 			<div class="modal-content">
 				<div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal">&times;</button>
@@ -46,9 +46,9 @@
 	 		var oMyForm = new FormData();
             oMyForm.append("multiPartFile", $(element)[0].files[0]);
 
-            if(stato != 'INTEGRAZIONE')
-            	oMyForm.append("fileId", (!fileId) ? 0 : fileId );
-            else
+//             if(stato != 'INTEGRAZIONE')
+//             	oMyForm.append("fileId", (!fileId) ? 0 : fileId );
+//             else
             	oMyForm.append("fileId", 0);
             oMyForm.append("tipo",tipoAllegato);
            	oMyForm.append([[${_csrf.parameterName}]],[[${_csrf.token}]]);
@@ -84,7 +84,7 @@
 					sendNotifyStatic([[#{message.errore}]], response, "error");
 				}
 		}
-		
+
 		function setFileExtForSignatureResponse(response){
 			if(response.id != null && response.id != 0) {
 				var prefixUrl = [[@{/file/}]];
