--- a/src/main/resources/templates/evento/eventoRendiconto.html
+++ b/src/main/resources/templates/evento/eventoRendiconto.html
@@ -47,7 +47,7 @@
 								<a id="rendicontazione_esempio_link" target="_blank" th:text="#{label.esempio_modello}" href="http://ecm.veneto.agenas.it/documenti/15.dichiarazione_esclusione_del_conflitto_di%20interessi_per_oggetto_sociale.pdf"></a>
 							</div>
 							<!-- <th:block th:include="fragments/allegati :: allegati(eventoWrapper, false, reportPartecipanti, null, null, null, false, 'edit', false)" ></th:block> -->
-							<th:block th:include="fragments/allegatiext :: allegatiext(eventoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_REPORT_PARTECIPANTI}', reportPartecipanti, null, null, null, false, 'edit', false)" ></th:block>
+							<th:block th:include="fragments/allegatiext :: allegatiext(eventoWrapper, false, '*{T(it.tredi.ecm.dao.enumlist.FileEnum).FILE_REPORT_PARTECIPANTI}', reportPartecipanti, null, null, null, true, 'edit', false)" ></th:block>
 
 							<div class="item form-group with-margin-top">
 								<div class="col-xs-5"></div>
