--- a/src/main/resources/templates/fragments/allegatiext.html
+++ b/src/main/resources/templates/fragments/allegatiext.html
@@ -27,7 +27,7 @@
 				<span class="small" style="display: block;" th:unless="${note == null}" th:text="${note}">messaggio aggiuntivo</span>
 			</label>
 			<th:block th:if="${editabile}">
-				<div class="col-lg-4 col-md-7 col-sm-7 col-xs-11">
+				<div class="col-lg-3 col-md-7 col-sm-7 col-xs-10">
 					<input type="file" accept="application/pdf" onchange="submitFileExt(this)" th:id="__${propertyName}__" th:attr="typefile=__${tipoAllegato}__, propertyName=__${propertyName}__" th:name="__${propertyName}___multipart" th:required="${required}"
 						style="display: none;" th:disabled="${fieldKey == null or !#lists.contains(__${wrapper}__.idEditabili, idField)}"/>
 					<input type="button" class="pull-left allegato-btn btn btn-success" th:value="#{label.scegli_file}" th:onclick="|setAllegatoExt('#__${propertyName}__');|" th:disabled="${fieldKey == null or !#lists.contains(__${wrapper}__.idEditabili, idField)}" />
@@ -36,11 +36,13 @@
 				</div>
 				<th:block th:if="${(!required and !__${wrapper}__.__${propertyName}__.new) or withFirma}">
 					<div class="col-xs-2 btn-group">
-						<button th:onclick="|rimuoviFile('__${propertyName}__')|" type="button" th:if="${!required and !__${wrapper}__.__${propertyName}__.new}" class="btn btn-danger">
-							<i class="fa fa-trash"></i>
-						</button>
-						<button th:onclick="|submitFirma('__${propertyName}__');|" type="button" th:if="${withFirma}" class="btn btn-primary">
+						<!-- pulsante per rimuovere file -->
+						<button th:onclick="|submitFirma('__${propertyName}__');|" type="button" th:if="${withFirma}" class="btn btn-primary pull-right">
 							<i class="fa fa-pencil"></i>
+						</button>
+						<!-- pulsante per aggiungere firma -->
+						<button th:onclick="|rimuoviFile('__${propertyName}__')|" type="button" th:if="${!required and !__${wrapper}__.__${propertyName}__.new}" class="btn btn-danger pull-right">
+							<i class="fa fa-trash"></i>
 						</button>
 					</div>
 				</th:block>
@@ -92,12 +94,12 @@
 			<input type="hidden" th:field="${__${wrapper}__.__${propertyName}__.id}" />
 			<input type="hidden" th:field="${__${wrapper}__.__${propertyName}__.nomeFile}" />
 
-			<label class="control-label col-lg-4 col-md-4 col-sm-4 col-xs-7" th:for="__${propertyName}__" th:unless="${__${wrapper}__ == eventoWrapper or __${wrapper}__ == relazioneAnnualeWrapper}">
+			<label class="control-label col-lg-3 col-md-4 col-sm-4 col-xs-7" th:for="__${propertyName}__" th:unless="${__${wrapper}__ == eventoWrapper or __${wrapper}__ == relazioneAnnualeWrapper}">
 				<i th:if="${__${wrapper}__ == comunicazioneWrapper}" class="fa fa-paperclip"></i>
 				<span th:text="#{label.__${propertyName}__}">label.tipoAllegato</span>
 				<span th:if="${note == null and editabile and required}" class="required">*</span>
 			</label>
-			<div class="allegato" th:classappend="${__${wrapper}__ == eventoWrapper} ? 'no-padding col-xs-11'">
+			<div class="allegato" th:classappend="${__${wrapper}__ == eventoWrapper} ? 'no-padding col-xs-10'">
 				<input type="file" onchange="submitFileExt(this)" th:id="__${propertyName}__" th:attr="typefile=__${tipoAllegato}__, propertyName=__${propertyName}__" th:name="__${propertyName}___multipart" required="required"
 					style="display: none;" />
 				<input type="button" th:id="file_+__${propertyName}__+_button" class="pull-left allegato-btn btn btn-success" th:value="#{label.scegli_file}" th:onclick="|setAllegatoExt('#__${propertyName}__');|" />
@@ -107,12 +109,12 @@
 			<th:block th:if="${editabile and ( (!required and !__${wrapper}__.__${propertyName}__.new) or withFirma )}">
 				<div class="col-xs-2 btn-group">
 					<!-- pulsante per rimuovi file -->
-					<button th:onclick="|rimuoviFile('__${propertyName}__')|" type="button" th:if="${!required and !__${wrapper}__.__${propertyName}__.new}" class="btn btn-danger">
-						<i class="fa fa-trash"></i>
+					<button th:onclick="|submitFirma('__${propertyName}__');|" type="button" th:if="${withFirma}" class="btn btn-primary pull-right">
+							<i class="fa fa-pencil"></i>
 					</button>
 					<!-- pulsante per aggiungere firma -->
-					<button th:onclick="|submitFirma('__${propertyName}__');|" type="button" th:if="${withFirma}" class="btn btn-primary">
-						<i class="fa fa-pencil"></i>
+					<button th:onclick="|rimuoviFile('__${propertyName}__')|" type="button" th:if="${!required and !__${wrapper}__.__${propertyName}__.new}" class="btn btn-danger pull-right">
+						<i class="fa fa-trash"></i>
 					</button>
 				</div>
 			</th:block>
